// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessControl default data 1`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Allow-Origin",
      "str2": "",
    },
  },
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Allow-Methods",
      "str2": "GET",
    },
  },
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Allow-Headers",
      "str2": "Content-Type",
    },
  },
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Max-Age",
      "str2": "3600",
    },
  },
]
`;

exports[`accessControl sets res object correctly 1`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Allow-Origin",
      "str2": "default",
    },
  },
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Allow-Methods",
      "str2": "GET",
    },
  },
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Allow-Headers",
      "str2": "Content-Type",
    },
  },
  Object {
    "type": "return",
    "value": Object {
      "str1": "Access-Control-Max-Age",
      "str2": "3600",
    },
  },
]
`;
